--- a/examples/nodejs/index.html
+++ b/examples/nodejs/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
 const url = new URL('http://localhost/subscribe');
 url.searchParams.append('topic', 'https://example.com/books/{id}');
 
