fix: add favicon to demo html

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="app.css" />
+    <link rel="icon" href="favicon.ico" />
   </head>
 
   <body>
